welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: not found: value faireV
faireV(c: Color){
^MethodsPicture:3: error: not found: value c
faireV(c: Color){
       ^MethodsPicture:6: error: not found: value leveBrosee
  leveBrosee()
  ^