welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
}
faireV(c: Color){
  avance()
  baisseBrosse()
  leveBrosee()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
}